fix the alignment

--- a/public/testSites/eisenhowerMatrix_styles.css
+++ b/public/testSites/eisenhowerMatrix_styles.css
@@ -145,3 +145,7 @@ button:hover {
 .delete-completed:hover {
     color: #c82333;
 }
+
+.div-list {
+    padding-bottom: 10px;
+}
